--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,7 +1,17 @@
+html {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	padding: 0;
 	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 	height: 100%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	-o-box-sizing: border-box;
 	box-sizing: border-box;
 	margin: 0;
 }
