Added drag-thumb to route list items

--- a/public/css/icons.css
+++ b/public/css/icons.css
@@ -59,3 +59,9 @@
 .icon-trash:before {
 	content: "\e607";
 }
+.icon-menu:before {
+	content: "\e60c";
+}
+.icon-sort:before {
+	content: "\e60d";
+}
