--- a/public/css/route.css
+++ b/public/css/route.css
@@ -1,8 +1,8 @@
 .route-box {
 	position: absolute;
 	width: 30%;
-	max-width: 250px;
-	min-width: 230px;
+	max-width: 270px;
+	min-width: 250px;
 	top: 50px;
 	height: 80%;
 	right: 50px;
@@ -51,7 +51,7 @@
 }
 .route-item {
 	position: relative;
-	padding: 8px 4px;
+	padding: 8px 4px 8px 24px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-ms-box-sizing: border-box;
@@ -188,28 +188,36 @@
 	text-shadow: 0 -1px rgba(0, 0, 0, 0.2);
 }
 .route-share .label {
-    font-size: 12px;
-    margin-bottom: 4px;
+	font-size: 12px;
+	margin-bottom: 4px;
 }
 .route-share {
-    width: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 5px;
+	width: 100%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	-o-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 5px;
 }
 .route-share input {
-    border: 1px solid rgba(0, 0, 0, .1);
-    width: 99%;
-    background: #EEE;
-    box-shadow: inset 1px 1px 1px rgba(0, 0, 0, .1);
-    padding: 2px 4px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    box-sizing: border-box;
-    font-size: 10px;
+	border: 1px solid rgba(0, 0, 0, .1);
+	width: 99%;
+	background: #EEE;
+	box-shadow: inset 1px 1px 1px rgba(0, 0, 0, .1);
+	padding: 2px 4px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	-o-box-sizing: border-box;
+	box-sizing: border-box;
+	font-size: 10px;
+}
+.route-item .thumb {
+	position: absolute;
+	left: 0;
+	top: 50%;
+	margin-top: -11px;
+	font-size: 18px;
+	color: rgb(197, 191, 191);
 }
